# ChessTour-Mher-sTask-

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.603d651  comfortcoef.cpp  comfortcoef.h  database.cpp  database.h  game.cpp  game.h  gamemanager.cpp  gamemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  tiebreaks.cpp  tiebreaks.h  tournament.ui
